<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cake"
            android:title="@string/menu_cake" />
        <item
            android:id="@+id/nav_slice_cake"
            android:title="@string/menu_slice_cake" />
        <item
            android:id="@+id/nav_buns"
            android:title="@string/menu_buns"/>
        <item
            android:id="@+id/nav_desert"
            android:title="@string/menu_desert"/>
        <item
            android:id="@+id/nav_connect"
            android:title="@string/menu_conn"/>
    </group>
</menu>